--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alogorithms & Datastructures</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Alogorithms & Datastructures</h1>
-
     <script src="app.js"></script>
   </body>
 </html>
